php/php.editor/test/unit/data/testfiles/verification/IncorrectFunctionCompositionHintError/testArrowFunctionMustBeParenthesized.php.testArrowFunctionMustBeParenthesizedRightHandle.hints
    |> fn($x) => trim($x) //error
       ------------------
HINT:Arrow functions on the right hand side of |> must be parenthesized
